--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,7 +12,8 @@
   padding-left: 20px;
 }
 
-/* .active {
-  text-decoration: underline;
-  color: rgb(218, 13, 13);
-} */
+.active {
+  font-weight: bold;
+  color: rgb(44, 13, 218);
+  background-color: rgb(204, 177, 27);
+}
